2008-03-17  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bugs #22447, #22387.
	* include/avr/iom88p.h: Fix definitions or add definitions.
	* include/avr/iom168p.h: Ditto.
	* include/avr/iom328p.h: Ditto.
	* include/avr/iom48p.h: Ditto.

2008-03-17  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #22642.
	* include/avr/power.h: Add support for AT90USB82 and AT90USB162.

2008-03-17  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #22643.
	* include/math.h: Rename occurrences of 'asm' needs to to '__asm__'.

2008-03-16  Eric B. Weddington  <eric.weddington@atmel.com>

	Patch #6355, by Stas Sergeev
	* include/avr/boot.h: add __extension__ to boot.h.

2008-03-16  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bugs #22568, #22548.
	* include/avr/iom328p.h: Add missing definitions.
	* NEWS: Update fixed bug list.

2008-03-16  Dmitry Xmelkov  <dmix@gmail.ru>

	* libc/stdlib/ftoa_engine.S: Add CPP scopes to exclude the parsing
	of asm by DOXYGEN.
	* libc/stdlib/setjmp.S: Ditto.
	* libc/stdlib/ultoa_invert.S: Ditto.
	* libc/stdlib/atof.S: Add DOXYGEN doc and exclude other asm from
	DOXYGEN parsing.
	* include/stdlib.h: Remove DOXYGEN of atof().

2008-03-14  Eric B. Weddington  <eric.weddington@atmel.com>

	* configure.ac: Add support for ATmega32C1.
	* devtools/gen-avr-lib-tree.sh: Ditto.
	* doc/api/main_page.dox: Ditto.
	* doc/api/using-tools.dox: Ditto.
	* include/avr/Makefile.am: Ditto.
	* include/avr/io.h: Ditto.
	* include/avr/power.h: Ditto.
	* include/avr/wdt.h: Ditto.
	* include/avr/iom32c1.h: New file.
	* NEWS: Add new device to list.

2008-03-10  Eric B. Weddington  <eric.weddington@atmel.com>

	* configure.ac: Add support for ATmega32M1 device.
	* devtools/gen-avr-lib-tree.sh: Ditto.
	* doc/api/main_page.dox: Ditto.
	* doc/api/using-tools.dox: Ditto.
	* include/avr/Makefile.am: Ditto.
	* include/avr/io.h: Ditto.
	* include/avr/power.h: Ditto.
	* include/avr/wdt.h: Ditto.
	* include/avr/iom32m1.h: New file.